# omgr

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.sqlx/: query-22a80444a2cf259f5e60bc4dafe3951deae69350b8526447cd835e5a733cf150.json  query-31a5323eda1a427046102d9e4f9fc8b06125e834be519b0208efd4a2b9b35029.json  query-515889d4f2a4a2b6a4f114806086fa201c790ed78f6c6ecb531899ef74714265.json  query-5f66cd7ec9bc891860f46e5d47fa003a05a4030834bc4c523f5f1c3c3c0c329f.json  query-68c90a1d27d92df01d1b734d785fb3b469c51fbc1b79d193762187890a04f53c.json  query-7b550ae67393bbf1269f3c5c62659e6819ad7c6cd68b18672d586f1815784785.json  query-7f20dbf664bde36def7d4e5e44158967b272b1a1d163c16fc28037850a0ba780.json  query-81d69a0d07db361466e278d827ffba3afce51cbafc89648209b4f743d771f178.json  query-9a6f7e1b2a896ccb8e66d4eb60c8d6816cc81cf26a791c692c57c0f8945f4106.json  (+7 more)
libs/dslog/: Cargo.toml
libs/dslog/src/: lib.rs
migrations/: 20240106102113_create_website.up.sql  (+15 more)
services/web/: Cargo.toml
services/web/.sqlx/: query-4002bb7d6f199e707f2a3713e72dff2c72582b606b57a07cbed9d7f44bd4f565.json  query-90fba5b2806ba17da8fe68171f787cccc803c31009b450560eee4fb9cb84879c.json  query-9392637bd0f85f8209ebac823b233ba14c67bb0eb82c005370fc83f629f66aaf.json  query-a8a958ef942478f9eed1f0c1a30e25731990981f8f1ed5641a1b63215d8699d8.json  query-ac0f02bfa95877d2645d2a62cf07fdf703a0860b3b28294bb5acd690bb21f1ca.json  query-ad8634eeaa38b248c501aa99148fa620caf3c6cf13fd3408972a4c0c3676e108.json  query-e32e40ea14a2f0a4a8797c9d342411abea49de00824b6cbd93977e73537a04f1.json
services/web/src/: main.rs
src/: event.rs  (+2 more)
(+9 files in other folders)
