[package]
name = "dslog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { workspace = true }
anyhow ={ workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }
sqlx = { workspace = true }