[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
poise = { workspace = true }
omgr = { path = "../../" }
actix-web = "4"
serde = "1"